--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -8,7 +8,7 @@ permissions:
   contents: write
 jobs:
   publish:
-    name: Publish Entities
+    name: Publish Backend
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
